--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   pre_build:
     commands:
       - echo "Installing Python dependencies from requirements.txt..."
-      - pip install -r requirements.txt -t ./python/lib/python3.9/site-packages
+      - pip install -r requirements.txt -t .
   build:
     commands:
       - echo "Creating deployment package..."
